--- a/widget/sale.html
+++ b/widget/sale.html
@@ -8,8 +8,8 @@
 
 <body style="margin: 10%;">
     <h1>Buy Now</h1>
-    <h2>BUSD Contract: <a href="https://testnet.bscscan.com/address/0xed24fc36d5ee211ea25a80239fb8c4cfd80f12ee">0xed24fc36d5ee211ea25a80239fb8c4cfd80f12ee</a></h2>
-    <h2>Sale Contract: <a href="https://testnet.bscscan.com/address/0x7c7136b6ED039319E9a983F780DeF9660703C260">0x7c7136b6ED039319E9a983F780DeF9660703C260</a></h2>
+    <h2>BUSD Contract: <a href="https://testnet.bscscan.com/address/0x8Ed1A05E81274c14fF2Bb4BF8FC24ed8AB06FDc5">0x8Ed1A05E81274c14fF2Bb4BF8FC24ed8AB06FDc5</a></h2>
+    <h2>Sale Contract: <a href="https://testnet.bscscan.com/address/0x76dA55947063b8f977533219a2Aaa30E0F072896">0x76dA55947063b8f977533219a2Aaa30E0F072896</a></h2>
     <form>
         <label><input id="val" type="number" placeholder="Amount to buy"></label>
         <br><br>
@@ -22,9 +22,12 @@
 
     </form>
     <script src="https://cdn.ethers.io/scripts/ethers-v4.min.js" charset="utf-8" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bignumber.js/8.0.2/bignumber.min.js" charset="utf-8" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script>
         const desiredNetwork = '97' // '1' is the bsc main network ID, 4 is Rinkeby
-        const culteSaleAddress = "0x7c7136b6ED039319E9a983F780DeF9660703C260" // UPDATE, this is pointing to Rinkeby
+        const culteSaleAddress = "0x76dA55947063b8f977533219a2Aaa30E0F072896" // UPDATE, this is pointing to Rinkeby
+        const busdAddress = "0x8Ed1A05E81274c14fF2Bb4BF8FC24ed8AB06FDc5";
 
         // Detect whether the current browser is ethereum-compatible,
         // and handle the case where it isn't:
@@ -83,22 +86,50 @@
             var signer = provider.getSigner();
             let account = await signer.getAddress();
             let abi = [
-                "function buyCulteWithBusd(uint256 _amount) public"
+                "function buyCulteWithBusd(uint256 _amount, uint256 _exp) public"
+            ];
+            let abiBUSD = [
+                "function approve(address spender, uint256 amount) external returns (bool)"
             ];
             let CulteSaleContract = new ethers.Contract(culteSaleAddress, abi, signer);
+            let BUSDContract = new ethers.Contract(busdAddress, abiBUSD, signer);
 
             console.log(await signer.getAddress());
             if(currency == "BUSD") {
                 let tx;
+                let tx1;
                 try {
-                    tx = await CulteSaleContract.buyCulteWithBusd(value);
+                    tx1 = await BUSDContract.approve(culteSaleAddress, Web3.utils.toWei(""+value, "ether"));
+                    let _decimalPlaces = decimalPlaces(value);
+                    let _number = numberWithoutDecimal(value);
+                    if(_decimalPlaces > 0) {
+                        tx = await CulteSaleContract.buyCulteWithBusd(_number, _decimalPlaces);
+                    } else {
+                        tx = await CulteSaleContract.buyCulteWithBusd(Web3.utils.toWei(""+value, "ether"), 0);
+                    }
                 } catch (err) {
                     console.log(err);
                     alert(err.data.message);
                 }
-                let receipt = await tx.wait(1)
+                await tx1.wait(1);
+                let receipt = await tx.wait(1);
                 if (receipt.status == 1) alert("Purchase confirmed, thank you!")
             }
+        }
+
+        function numberWithoutDecimal(num) {
+            return parseInt((''+num).replace('.',''));
+        }
+
+        function decimalPlaces(num) {
+            var match = (''+num).match(/(?:\.(\d+))?(?:[eE]([+-]?\d+))?$/);
+            if (!match) { return 0; }
+            return Math.max(
+                0,
+                // Number of digits right of decimal point.
+                (match[1] ? match[1].length : 0)
+                // Adjust for scientific notation.
+                - (match[2] ? +match[2] : 0));
         }
     </script>
 </body>
